--- a/1-5-2/1-5-2/1-5-2.vcxproj
+++ b/1-5-2/1-5-2/1-5-2.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{41E4B39B-E6EF-41A3-86D6-2BF487179F96}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>My152</RootNamespace>
+    <ProjectName>1-examples</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
