--- a/opencv/core/core.vcxproj
+++ b/opencv/core/core.vcxproj
@@ -77,8 +77,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ContrastAndBright.cpp" />
+    <ClCompile Include="magnitude.cpp" />
     <ClCompile Include="mix.cpp" />
     <ClCompile Include="reduceColor.cpp" />
+    <ClCompile Include="splitMerge.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
