--- a/opencv/core/core.vcxproj.filters
+++ b/opencv/core/core.vcxproj.filters
@@ -30,5 +30,20 @@
     <ClCompile Include="magnitude.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
+    <ClCompile Include="boxFilter.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="blur.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GaussianBlur.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MedianBlur.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BilateralFilter.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
