--- a/opencv/6-imgpro/6-imgpro.vcxproj
+++ b/opencv/6-imgpro/6-imgpro.vcxproj
@@ -83,6 +83,9 @@
     <ClCompile Include="..\core\GaussianBlur.cpp" />
     <ClCompile Include="..\core\MedianBlur.cpp" />
     <ClCompile Include="MorphologyEx.cpp" />
+    <ClCompile Include="pryUp.cpp" />
+    <ClCompile Include="pyrDown.cpp" />
+    <ClCompile Include="resize.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
