--- a/opencv/7-imgchange/7-imgchange.vcxproj
+++ b/opencv/7-imgchange/7-imgchange.vcxproj
@@ -77,6 +77,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="canny.cpp" />
+    <ClCompile Include="laplacian.cpp" />
+    <ClCompile Include="scharr.cpp" />
+    <ClCompile Include="sobel.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
